--- a/public/jj/css/canvas.css
+++ b/public/jj/css/canvas.css
@@ -1,1 +1,1 @@
-html,body{margin:0;padding:0;width:100%;height:100%;overflow:hidden;background-color:#000}body{display:flex}body canvas{margin:0 auto;background:#f00}
+html,body{margin:0;padding:0;width:100%;height:100%;overflow:hidden;background-color:#000}body{display:flex}body canvas{margin:0 auto}
